--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@ port = 8787
 local_protocol = "http"
 
 [env.vars]
-CUSTOM_DOMAIN = "libcuda.so"
+CUSTOM_DOMAIN = "wb0999.top"
 
 [env.dev.vars]
 MODE = "debug"
@@ -17,13 +17,13 @@ CUSTOM_DOMAIN = "exmaple.com"
 [env.production]
 name = "cloudflare-docker-proxy"
 # routes = [
-#   { pattern = "docker.libcuda.so", custom_domain = true },
-#   { pattern = "quay.libcuda.so", custom_domain = true },
-#   { pattern = "gcr.libcuda.so", custom_domain = true },
-#   { pattern = "k8s-gcr.libcuda.so", custom_domain = true },
-#   { pattern = "k8s.libcuda.so", custom_domain = true },
-#   { pattern = "ghcr.libcuda.so", custom_domain = true },
-#   { pattern = "cloudsmith.libcuda.so", custom_domain = true },
+#   { pattern = "docker.wb0999.top", custom_domain = true },
+#   { pattern = "quay.wb0999.top", custom_domain = true },
+#   { pattern = "gcr.wb0999.top", custom_domain = true },
+#   { pattern = "k8s-gcr.wb0999.top", custom_domain = true },
+#   { pattern = "k8s.wb0999.top", custom_domain = true },
+#   { pattern = "ghcr.wb0999.top", custom_domain = true },
+#   { pattern = "cloudsmith.wb0999.top", custom_domain = true },
 # ]
 
 [env.production.vars]
@@ -32,7 +32,7 @@ TARGET_UPSTREAM = ""
 
 [env.staging]
 name = "cloudflare-docker-proxy-staging"
-# route = { pattern = "docker-staging.libcuda.so", custom_domain = true }
+# route = { pattern = "docker-staging.wb0999.top", custom_domain = true }
 
 [env.staging.vars]
 MODE = "staging"
